# plausible-criminality

./: .gitignore  README.md  hardhat.config.cjs  package.json
circuits/merkle/: Nargo.toml
circuits/merkle/src/: lib.nr
circuits/privateTransfer/: Nargo.toml  Prover.toml
circuits/privateTransfer/src/: main.nr
circuits/publicTransfer/: Nargo.toml
circuits/publicTransfer/src/: main.nr
circuits/test/: Nargo.toml
circuits/transfer/: Nargo.toml
circuits/transfer/src/: lib.nr
circuits/transferProver/: Nargo.toml
circuits/transferProver/src/: main.nr  old-storage-root-prover.nr
contracts/: IncomingBalanceTree.sol  MerkleStateBase.sol  ModifiedERC20.sol  PrivateTransferVerifier.sol  PublicTransferVerifier.sol  ShadowBalanceTree.sol  UltraAnon.sol  verifier.sol
contracts/contracts/: ERC20.sol  IncomingBalanceTree.sol  MerkleTreeWithHistory.sol  ShadowBalanceTree.sol  UltraAnon.sol  UpdatableMerkleTreeWithHistory.sol
contracts/interfaces/: IModifiedERC20.sol
ignition/deployments/chain-11155111/: deployed_addresses.json  journal.jsonl
ignition/deployments/chain-763373/: deployed_addresses.json  journal.jsonl
ignition/modules/: UltraAnon.cjs  Verifier.js
relayer/: Cargo.toml  README.md
relayer/src/: cors.rs  main.rs  types.rs
scripts/: deploy.js  generateZeros.js  getMerkleProof.js  hashor.js  makeNoirTest.js  prove.js  replaceLine.js  syncMaxing.js  transactionBuilder.js  verifyProof.js
test/: contractinteractionTest.js
ui/: eventHandlers.js  index.html  main.js  package.json  vite.config.js
(+12 files in other folders)
